--- a/cs146/css_hw/food.css
+++ b/cs146/css_hw/food.css
@@ -8,8 +8,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  /*letter-spacing: 0.01em;*/
-  font-stretch: expanded;
+  letter-spacing: 0.04em;
 }
 body {
   width: 75%;
